# ViennaRNA-bindings

./: .buildbot-devel  .travis.yml  README.md  ViennaRNA-bindings.cabal  changelog  changelog.md  default.nix  flake.nix  shell.nix  stack.yaml
BioInf/ViennaRNA/: Bindings.hs
BioInf/ViennaRNA/Bindings/: Fold.hs  Inline.hs
BioInf/ViennaRNA/Bindings/FFI/: Centroid.chs  CoFold.chs  Duplex.chs  Fold.chs  PartFunc.chs  RNAfold.chs  Utils.hs
C/: config.h  ffiwrap_centroid.c  ffiwrap_fold.c  ffiwrap_part_func.c  ffiwrap_rnafold.c
C/ViennaRNA/: Makefile.in  libRNA.la  libRNA_conv.la  subopt.c
cbits/: ffiwrap_part_func.c  gquad.c  utils.c
include/: config.h
tests/: Test.hs  properties.hs
