name:                ViennaRNA-bindings
version:             0.0.2.2
synopsis:            ViennaRNA v2 bindings
homepage:            http://www.tbi.univie.ac.at/~choener/
license:             OtherLicense
license-file:        LICENSE
author:              Christian Hoener zu Siederdissen (bindings) 2013, The ViennaRNA Team (library) 1994-2013
maintainer:          choener@tbi.univie.ac.at
copyright:           The ViennaRNA Team 1994-2013
category:            Bioinformatics, FFI
build-type:          Simple
cabal-version:       >=1.8

description:
  Bindings to the ViennaRNA package, version 2.x.y.
  .
  Only a partial set of bindings is provided. If you need additional functions,
  please open an issue on github.
  .
  The ViennaRNA package needs to be installed.
  .
  If you use this software, please cite:
  R. Lorenz, S.H. Bernhart, C. Hoener zu Siederdissen, H. Tafer, C. Flamm, P.F. Stadler and I.L. Hofacker (2011),
  "ViennaRNA Package 2.0", Algorithms for Molecular Biology: 6:26

Flag devel
  description: build developer test files
  default: False

library
  exposed-modules:
    -- public interfaces
    BioInf.ViennaRNA.Bindings
    -- the FFI
    BioInf.ViennaRNA.Bindings.FFI.Fold
    BioInf.ViennaRNA.Bindings.FFI.PartFunc
    BioInf.ViennaRNA.Bindings.FFI.Utils
  -- other-modules:
  build-depends:
    base == 4.* ,
    array
  build-tools:
    c2hs
  extra-libraries:
    RNA
    gomp

executable Test
  buildable:
    False
  if flag(devel)
    buildable:
      True
  build-depends:
    base == 4.*     ,
    array           ,
    ViennaRNA-bindings
  main-is:
    tests/Test.hs
